--- a/style.css
+++ b/style.css
@@ -1,37 +1,38 @@
 html {
-  height: 100%;
-  width: 100%;
-  font-family: "Titillium Web", sans-serif;
+    height: 100%;
+    width: 100%;
+    font-family: "Fira Code", sans-serif;
 }
 
 body {
-  min-height: 100%;
-  min-width: 100%;
-  background: linear-gradient(pink, violet);
+    min-height: 100%;
+    min-width: 100%;
+    background: linear-gradient(rgb(83, 110, 138), rgb(112, 128, 144));
 }
 
 button {
-  font-size: 7px;
+    font-size: 7px;
+    border-radius: 10px;
 }
 
 #main-content {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  border: 1px solid #333;
-  background: rgba(255, 255, 255, 0.3);
-  padding: 15px 20px 18px 18px;
-  border-radius: 5px;
-  box-shadow: 2px 5px 5px #333;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border: 1px solid #333;
+    background: rgba(112, 128, 144, 30%);
+    padding: 15px 20px 18px 18px;
+    border-radius: 10px;
+    box-shadow: 2px 5px 5px #333;
 }
 
 #list {
-  margin: 10px;
-  border: 1px solid #333;
-  background: rgba(255, 255, 255, 0.75);
-  padding: 15px 20px 18px 18px;
-  border-radius: 5px;
-  box-shadow: 2px 5px 5px #333;
+    margin: 10px;
+    border: 1px solid #333;
+    background: hsla(210, 20%, 75%, 0.75);
+    padding: 15px 20px 18px 18px;
+    border-radius: 5px;
+    box-shadow: 2px 5px 5px #333;
 }
